# GymNerd

./: BackgroundWidget.h  CMakeLists.txt  HowToContribute  README.md  calculations.cpp  calculations.h  gymnerds.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prevuser.json  profilechooser.cpp  profilechooser.h  resources.qrc  statscreen.cpp  statscreen.h  statscreen.ui  userinfo.cpp  userinfo.h  userinfo.ui
.github/workflows/: ci.yml  scorecard.yml
